# transfer_Li

./: .flake8  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  requirements-dev.txt  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: codeql-analysis.yml  tests-skip.yml  tests.yml
bash/: cleanup_gmx_analyses.sh  cleanup_mdt_analyses.sh  cleanup_sim_dir.sh  prepare_sim_dir.sh
gmx/: 01_re_nvt423_ld_walls_freeze.mdp  02_pr_nvt423_vr_walls_freeze.mdp
python/: transfer_Li.py
slurm/job/: mdt_rmsd_vs_time.sh
slurm/submit/: submit_gmx_analyses.sh  submit_mdt_analyses.sh  submit_pr_nvt423_vr.sh  submit_re_nvt423_ld.sh  submit_rmsd_vs_time.sh
